refactor: move Blog and Reviews to footer navigation
- Remove Blog and Reviews and Ratings from main navigation menu
- Add footerNavigation field to site settings schema
- Move Blog and Reviews and Ratings to footer Quick Links section
- Clean up main navigation for better focus on core pages

--- a/src/content/site/settings.json
+++ b/src/content/site/settings.json
@@ -74,20 +74,22 @@
       ]
     },
     {
-      "label": "Blog",
-      "href": "/blog"
-    },
-    {
-      "label": "Reviews and Ratings",
-      "href": "/reviews-and-ratings"
-    },
-    {
       "label": "Contact Us",
       "href": "/contact"
     },
     {
       "label": "Map & Directions",
       "href": "/map-and-directions"
+    }
+  ],
+  "footerNavigation": [
+    {
+      "label": "Blog",
+      "href": "/blog"
+    },
+    {
+      "label": "Reviews and Ratings",
+      "href": "/reviews-and-ratings"
     }
   ]
 }
