--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@astrojs/mdx": "^4.3.13",
     "@astrojs/sitemap": "^3.6.0",
     "@astrojs/tailwind": "^5.1.0",
+    "@iconify-json/mdi": "^1.2.3",
     "astro": "^5.16.6",
     "astro-icon": "^1.1.5"
   },
