--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "astro dev",
     "build": "astro build",
     "preview": "astro preview",
-    "astro": "astro"
+    "astro": "astro",
+    "optimize-images": "node scripts/optimize-banner-images.js"
   },
   "dependencies": {
     "@astrojs/mdx": "^4.3.13",
@@ -19,6 +20,7 @@
   },
   "devDependencies": {
     "@types/node": "^22.10.2",
+    "sharp": "^0.34.5",
     "tailwindcss": "^3.4.17",
     "typescript": "^5.7.2"
   }
