--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "start": "astro dev",
     "build": "astro build",
     "preview": "astro preview",
-    "astro": "astro",
-    "optimize-images": "node scripts/optimize-banner-images.js"
+    "astro": "astro"
   },
   "dependencies": {
     "@astrojs/mdx": "^4.3.13",
@@ -20,7 +19,6 @@
   },
   "devDependencies": {
     "@types/node": "^22.10.2",
-    "sharp": "^0.34.5",
     "tailwindcss": "^3.4.17",
     "typescript": "^5.7.2"
   }
